--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage" : "https://thisIsLight.github.io/Project13",
-  
+  "homepage": "https://thisIsLight.github.io/Project13",
   "name": "project13",
   "version": "0.1.2",
   "private": true,
@@ -8,16 +7,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.2",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
